# PlayPalace11

./: .pre-commit-config.yaml  README.md
.github/workflows/: installers.yml
btspeak_client/: README  __init__.py  audio_manager.py  client.py  config_manager.py  io_adapter.py  network_manager.py  pyproject.toml  run_btspeak_client.sh  run_tests.sh  runtime.py  user-btspeak-client.menu
btspeak_client/tests/: test_audio_manager_extra.py  test_buffer_system.py  test_client.py  test_config_manager.py  test_io_adapter.py  test_io_adapter_console.py  test_network_manager.py  test_network_manager_extra.py  test_runtime.py
client/: network_manager.py  packet_schema.json  pyproject.toml
client/ui/: config_sharing.py  main_window.py
clients/btspeak/: README  pyproject.toml  run_btspeak_client.sh  run_tests.sh  user-btspeak-client.menu
clients/desktop/: certificate_prompt.py  client.py  network_manager.py  packet_schema.json
clients/web/: app.js
scripts/hooks/: run_vulture.py
server/: config.example.toml  config.toml  main.py  packet_schema.json  pyproject.toml
server/auth/: __init__.py  auth.py
server/core/: administration.py  server.py
server/game_utils/: action_set_creation_mixin.py  bot_helper.py  dice.py  duration_estimate_mixin.py  game_result_mixin.py  options.py  teams.py  timeline_mixin.py
server/games/: base.py
server/network/: packet_models.py
server/tests/: test_integration.py  (+9 more)
shared/: __init__.py  debug_logging.py
web-client/: AGENTS.md  README.md  a11y.js  app.js  audio.js  config.js  index.html  keybinds.js  network.js  version.js
(+91 files in other folders)
