[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playpalace-btspeak-client"
version = "11.0.0"
description = "PlayPalace BTSpeak-native client"
requires-python = ">=3.11"
dependencies = [
  "websockets>=14.0",
  "jsonschema>=4.21",
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "anyio>=4.0",
  "typeguard>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
